--- a/course-syllabus.qmd
+++ b/course-syllabus.qmd
@@ -11,6 +11,17 @@ title: "Syllabus"
 | Instructor: Prof. Emmanuel Teitelbaum
 | Email: [ejt\@gwu.edu](mailto:ejt@gwu.edu)
 | Office Hours: [Mondays 3-5 p.m.](https://calendly.com/emmanuel-teitelbaum) and by appointment.
+| Location: Online or in Monroe Hall, Rm. 411
+|
+| Teaching Assistant: Gourab Mukherjee
+| Email: [gourab.mukherjee\@email.gwu.edu](mailto:gourab.mukherjee@email.gwu.edu)
+| Office Hours: Fridays, time TBD
+| Location: TBD
+|
+| Teaching Assistant: Sai Srinivas Lakkoju
+| Email: [saisrinivas.lakkoju\@email.gwu.edu](mailto:saisrinivas.lakkoju@email.gwu.edu)
+| Office Hours: Thursdays, 1-3 p.m. 
+| Location: Online, email for link
 |
 | Credit Hours: 3.0.
 |
