--- a/course-syllabus.qmd
+++ b/course-syllabus.qmd
@@ -10,13 +10,13 @@ title: "Syllabus"
 |
 | Instructor: Prof. Emmanuel Teitelbaum
 | Email: [ejt\@gwu.edu](mailto:ejt@gwu.edu)
-| Office Hours: [Mondays 3-5 p.m.](https://calendly.com/emmanuel-teitelbaum) and by appointment.
-| Location: Online or in Monroe Hall, Rm. 411
+| Office Hours:Mondays 3-5 p.m. and by appointment.
+| Location: Online or in Monroe Hall, Rm. 411, Sign up [here]((https://calendly.com/emmanuel-teitelbaum))
 |
 | Teaching Assistant: Gourab Mukherjee
 | Email: [gourab.mukherjee\@email.gwu.edu](mailto:gourab.mukherjee@email.gwu.edu)
-| Office Hours: Fridays, time TBD
-| Location: TBD
+| Office Hours: Fridays, 9:30-11:30 a.m.
+| Location: Online, follow [this link](https://gwu-edu.zoom.us/my/saisrinivaslakkoju)
 |
 | Teaching Assistant: Sai Srinivas Lakkoju
 | Email: [saisrinivas.lakkoju\@email.gwu.edu](mailto:saisrinivas.lakkoju@email.gwu.edu)
