--- a/index.qmd
+++ b/index.qmd
@@ -20,7 +20,10 @@ advdate <- function(day, week) {
 }
 ```
 
-This page displays an outline of the topics, content, and assignments for the semester. Links, to slides, assignments and course resources will go live as the semester progresses. ***All assignments must be submitted by 11:59 p.m. on the due date***.
+This page displays an outline of the topics, content, and assignments
+for the semester. Links, to slides, assignments and course resources
+will go live as the semester progresses. ***All assignments must be
+submitted by 11:59 p.m. on the due date***.
 
 ::: column-screen-inset-right
 | Week | Date                | Topic                          |                                                                               Reading                                                                               |                                                  Video                                                   |                   Slides                    | Assignment |        Due Date         |
@@ -28,7 +31,7 @@ This page displays an outline of the topics, content, and assignments for the se
 |  1   | `r advdate(mon,0)`  | Welcome to DATS 1001           | [📖](https://rstudio-education.github.io/hopr/starting.html "hopwr, Appendix A and B") [📖](https://quarto.org/docs/get-started/hello/rstudio.html "Hello, Quarto") |                  [📺](https://youtu.be/eimM6pNkYjE) [📺](https://youtu.be/6QN9ZYURDFg)                   |                                             |            |                         |
 |      | `r advdate(wed,0)`  | Meet ouR tech stack            |                                                [📖](https://www.markdownguide.org/getting-started/ "Markdown Guide")                                                |                            [📺](https://www.youtube.com/watch?v=bTVIMt3XllM)                             | [🖥️](slides/week-1.2.qmd "Week 1.2 slides") |            |                         |
 |  2   | `r advdate(mon,1)`  | 🇺🇸 No class, Labor Day         |                                                                                                                                                                     |                                                                                                          |                                             |            |                         |
-|      | `r advdate(wed,1)`  | R coding basics                |                                                     [📖](https://rstudio-education.github.io/hopr/basics.html)                                                      | [📺](https://www.youtube.com/watch?v=hvFBDmT4bdY) [📺](https://youtu.be/9f2g7RN5N0I?si=WMsaGlhFC7Fx-ZNy) |                     🖥️                      |            |                         |
+|      | `r advdate(wed,1)`  | R coding basics                |                                                     [📖](https://rstudio-education.github.io/hopr/basics.html)                                                      | [📺](https://www.youtube.com/watch?v=hvFBDmT4bdY) [📺](https://youtu.be/9f2g7RN5N0I?si=WMsaGlhFC7Fx-ZNy) | [🖥️](slides/week-2.1.qmd "Week 2.1 slides") |            |                         |
 |  3   | `r advdate(mon,2)`  | Grammar of graphics            |                                                                                 📖                                                                                  |                                                    📺                                                    |                     🖥️                      |            |                         |
 |      | `r advdate(wed,2)`  | Which visualization do I use?  |                                                                                 📖                                                                                  |                            [📺](https://www.youtube.com/watch?v=y7ESq_O3Odw)                             |                     🖥️                      |            |                         |
 |  4   | `r advdate(mon,3)`  | Visualization best practices   |                                                                                 📖                                                                                  |                            [📺](https://www.youtube.com/watch?v=y7ESq_O3Odw)                             |                     🖥️                      |            |                         |
