--- a/index.qmd
+++ b/index.qmd
@@ -33,7 +33,7 @@ submitted by 11:59 p.m. on the due date***.
 |  2   | `r advdate(mon,1)`  | 🇺🇸 No class, Labor Day         |                                                                                                                                                                     |                                                                                                                |                                             |            |                         |
 |      | `r advdate(wed,1)`  | R coding basics                |                                                     [📖](https://rstudio-education.github.io/hopr/basics.html)                                                      |    [📺](https://www.youtube.com/watch?v=hvFBDmT4bdY) [📺](https://youtu.be/9f2g7RN5N0I?si=WMsaGlhFC7Fx-ZNy)    | [🖥️](slides/week-2.1.qmd "Week 2.1 slides") |            |                         |
 |  3   | `r advdate(mon,2)`  | Grammar of graphics            |                            [📖](https://r4ds.hadley.nz/data-import "r4ds, 7") [📖](https://r4ds.hadley.nz/data-visualize.html "r4ds, 2")                            |  [📺](https://youtu.be/QG1oDJPoIio "Make a bar chart") [📺](https://youtu.be/-1YhCql-gMo "Make a histogram")   | [🖥️](slides/week-3.1.qmd "Week 3.1 slides") |            |                         |
-|      | `r advdate(wed,2)`  | Which visualization do I use?  |                   [📖](https://r4ds.hadley.nz/layers.html "r4ds, 10.1-10.4") [📖](https://r4ds.hadley.nz/communication.html#labels "r4ds, 12.2")                    | [📺](https://youtu.be/PnmQ2MFQpIc "Make a line chart") [📺](https://youtu.be/FiosjUVyfLM "Make a scatterplot") |                     🖥️                      |            |                         |
+|      | `r advdate(wed,2)`  | Which visualization do I use?  |                   [📖](https://r4ds.hadley.nz/layers.html "r4ds, 10.1-10.4") [📖](https://r4ds.hadley.nz/communication.html#labels "r4ds, 12.2")                    | [📺](https://youtu.be/PnmQ2MFQpIc "Make a line chart") [📺](https://youtu.be/FiosjUVyfLM "Make a scatterplot") | [🖥️](slides/week-3.2.qmd "Week 3.2 slides") |            |                         |
 |  4   | `r advdate(mon,3)`  | Visualization best practices   |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |            |                         |
 |      | `r advdate(wed,3)`  | Coding assignment 1            |                                                                                 📖                                                                                  |                                                                                                                |                     🖥️                      |     🧮     |   `r advdate(sun,4)`    |
 |  5   | `r advdate(mon,4)`  | What is tidy data?             |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |            |                         |
