Update office hours links for TAs

--- a/course-syllabus.qmd
+++ b/course-syllabus.qmd
@@ -16,12 +16,12 @@ title: "Syllabus"
 | Teaching Assistant: Gourab Mukherjee
 | Email: [gourab.mukherjee\@email.gwu.edu](mailto:gourab.mukherjee@email.gwu.edu)
 | Office Hours: Fridays, 9:30-11:30 a.m.
-| Location: Online, follow [this link](https://gwu-edu.zoom.us/my/saisrinivaslakkoju)
+| Location: Online, follow [this link](https://gwu-edu.zoom.us/my/gourabmukherjee)
 |
 | Teaching Assistant: Sai Srinivas Lakkoju
 | Email: [saisrinivas.lakkoju\@email.gwu.edu](mailto:saisrinivas.lakkoju@email.gwu.edu)
 | Office Hours: Thursdays, 1-3 p.m. 
-| Location: Online, email for link
+| Location: Online, follow [this link](https://gwu-edu.zoom.us/my/saisrinivaslakkoju)
 |
 | Credit Hours: 3.0.
 |
